# Eatter

./: .gitignore  Cargo.toml
eatter_frontend/: package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
eatter_frontend/eatter_frontend/: package-lock.json  package.json
eatter_frontend/src/: App.svelte  app.css  app.d.ts  app.html  hooks.server.ts
eatter_frontend/src/lib/: Feed.svelte  Post.svelte  api.ts  login.ts  post.ts  search.ts  stores.ts
eatter_frontend/src/lib/ui_components/: Button.svelte  Comment.svelte  ItemForm.svelte  Local.svelte  Meal.svelte  MealCard.svelte  Post.svelte  ResizableInput.svelte  User.svelte
eatter_frontend/src/lib/ui_components/sidebar/: Menu.svelte  Navbar.svelte  Sidebar.svelte
eatter_frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  styles.css
eatter_frontend/src/routes/[name]/: +page.svelte  +page.ts
eatter_frontend/src/routes/feed/: +page.server.ts  +page.svelte
eatter_frontend/src/routes/local[lid]/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  +page.ts
eatter_frontend/src/routes/local[lid]/meal[mid]/: +page.server.ts  +page.svelte  +page.ts
eatter_frontend/src/routes/login/: +page.server.ts  +page.svelte
eatter_frontend/src/routes/logout/: +page.server.ts  +page.svelte
eatter_frontend/src/routes/panel/: +page.server.ts  +page.svelte
eatter_frontend/src/routes/post[pid]/: +page.server.ts  +page.svelte  +page.ts
eatter_frontend/src/routes/register/: +page.server.ts  +page.svelte
eatter_frontend/src/routes/search/: +layout.svelte  +page.server.ts  +page.svelte
eatter_frontend/src/routes/search/results/: +page.server.ts  +page.svelte
eatter_frontend/src/routes/user[uid]/: +page.server.ts  +page.svelte
eatter_frontend/src/routes/your_feed/: +page.server.ts
eatter_server/: Cargo.toml  eatter.sql  mockdata.sql  sqlx-data.json
eatter_server/assets/: style.css
eatter_server/src/: base.rs  db.rs  error.rs  feed.rs  gets.rs  grab.rs  lib.rs  login.rs  main.rs  posts.rs  routes.rs  state.rs
eatter_server/src/routes/: auth.rs  comment.rs  local.rs  meal.rs  review.rs  search.rs  user.rs
eatter_server/templates/: base.html  base_feed.html  login.html  post.html
report/: report.aux  report.fdb_latexmk  report.fls  report.tex
src/: base.rs  lib.rs  login.rs  main.rs  posts.rs  search.rs  state.rs
templates/: base.html  comment.html  feed.html  post.html  search.html
