[package]
name = "eatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version = "0.11.1", features = ["with-axum"]}
askama_axum = "0.2.1"
async-trait = "0.1.61"
axum = {version = "0.6.2", features = ["macros"]}
serde = {version = "1.0.152", features = ["derive"]}
tokio = {version = "1.24.1", features = ["full"]}
tower = {version = "0.4.13", features = ["util"]}
tower-cookies = {version = "0.8.0", features = ["signed"]}
tower-http = {version = "0.3.5", features = ["fs", "trace"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
